# C-TeC

./: .gitignore  README.md  conda-environment.yaml  demo.ipynb  pyproject.toml
c_tec/: __init__.py  config.py  config.yaml  evaluate.py  main.py  train.py
c_tec/buffer/: __init__.py  trajectory.py
c_tec/environment/: wrappers.py
c_tec/envs/: __init__.py  wrappers.py
c_tec/models/: TemporalConstrastiveModel.py  __init__.py  actor_critic_models.py  contrastive_encoders.py  encoders.py  loss.py  losses.py  policies.py  rnd.py  rnd_encoders.py
c_tec/utils/: MetricsLogger.py  logging.py  visualization.py
configs/: c-tec_config.yaml  rnd_config.yaml
configs/demo/: c-tec_long_horizon_config.yaml  c-tec_uniform_config.yaml  rnd_long_training_config.yaml
