[project]
authors = [{name = "LSNoor", email = "lucnoor@gmail.com"}]
dependencies = ["minigrid>=3.0.0,<4", "torch>=2.10.0,<3"]
name = "C-TeC"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
c_tec = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.12"

[tool.pixi.system-requirements]
cuda = "12.8"

[tool.pixi.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

[tool.hatch.build.targets.wheel]
packages = ["c_tec"]
